fix filters centering and header alignment

--- a/asaas_theme/public/css/asaas-desk.css
+++ b/asaas_theme/public/css/asaas-desk.css
@@ -93,7 +93,6 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default{
 .page-title .title-text{
     margin-right: 10px;
     max-width: fit-content;
-    margin-top: -6px;
 }
 
 .page-title .title-text:empty{
@@ -130,7 +129,7 @@ body[data-route=""] header .navbar > .container,.page-head{
     width: 100%!important;
 }
 .filter-actions.col-sm-1 {
-    width: 11.333333%!important;
+    height: 34px;
 }
 
 
@@ -301,7 +300,6 @@ body{
 
     body[data-route^="Form"] .page-title .title-text{
         font-size: 24px;
-        margin-top: -15px;
     }
 }
 #navbar-breadcrumbs{
